# Text_Editor

./: CMakeLists.txt  File.cpp  File.h  main.cpp
include/: Date.h  File.h  FileSystem.h  UI.h
src/: Date.cpp  File.cpp  FileSystem.cpp  UI.cpp
